# Dmarket_Telegram_bot

./: .editorconfig  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .secrets.baseline  Dockerfile  README.md  Taskfile.yml  conftest.py  dev_tools.py  dmarket_parser.dev.env  dmarket_parser_main.py  docker-compose.dev.yml  docker-compose.yml  example.env  fix_all_transliterations.py  fix_cyrillic.py  fix_imports.py  fix_latin.py  fix_transliterations.py  improvements.md  logging.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  run_tests_with_coverage.py  worker.py  ВНЕСТИ ЗАВТРА  НЕДЕЛИ.md  Нужно доделать.txt
.github/: copilot-instructions.md  dependabot.yml
.github/copilot/: cli.json  docs.md  examples.md  ignore  snippets.md  vocabulary.txt
.github/workflows/: code-quality.yml  security.yml  testing.yml  tests.yml
bot_handlers/: language_handler.py
common/: aioredis_compatibility.py  async_resource_manager.py  async_utils.py  dmarket_auth.py  env_var.py  errors.py  http_client.py  rabbitmq_auto_reconnect.py  rabbitmq_connector.py  redis_auto_reconnect.py  redis_connector.py  secure_logging.py  tracer.py
common/core/: dataclass_json.py
common/patches/: __init__.py  aioredis_exceptions_patch.py  improved_aioredis_patch.py
common/rpc/: message.py  message_channel.py  queue_factory.py  queue_listener.py  queue_publisher.py  queue_reader.py  rabbitmq_client.py
config/: __init__.py  app_config.py  dmarket_api.py  settings.py  validation.py
core/: __init__.py
data/: user_language_preferences.json
dm-trading-tools-master/signature-builder/python/: targetCreator.py
docs/: configuration_improvements.md  data_processing_improvements.md  development_setup.md  i18n_improvements.md  i18n_usage_examples.md  implementation_plan.md  improvements_summary.md  integration_plan.md  repository_restructuring_summary.md  repository_structure.md  scalability_improvements.md
docs/source/: architecture.rst  conf.py  development.rst  index.rst  installation.rst  intro.rst  testing.rst  usage.rst
docs/source/api/: bot_handlers.rst  common.rst  config.rst  index.rst  monitoring.rst  price_monitoring.rst
examples/: README.md  improved_integration_example.py  monitoring_example.py  telegram_rich_media_example.py
i18n/: __init__.py
locale/en/LC_MESSAGES/: messages.po
locale/ru/LC_MESSAGES/: messages.po
locale/uk/LC_MESSAGES/: messages.po
monitoring/: README.md  health.py  server.py
price_monitoring/: __init__.py  async_runner.py  common.py  config_integration.py  constants.py  decorators.py  error_handling.py  exceptions.py  logs.py  market_types.py  retries.py  system_constants.py  types.py  validation.py
price_monitoring/constants/: dmarket_api.py
price_monitoring/models/: __init__.py  dmarket.py  dmarket_adapter.py  dmarket_common.py
price_monitoring/parsers/: __init__.py  abstract_parser.py  dmarket_api.py
price_monitoring/parsers/dmarket/: client.py  dmarket_parser.py  dmarket_parser_mock.py  improved_dmarket_parser.py  items_parser.py  parser.py  proxy.py
price_monitoring/queues/: __init__.py  abstract_dmarket_item_queue.py  abstract_dmarket_order_queue.py  abstract_dmarket_sell_history_queue.py  abstract_market_name_queue.py
price_monitoring/queues/rabbitmq/: __init__.py  dmarket_item_queue.py  dmarket_items_queue.py  dmarket_result_queue.py  dmarket_sell_history_queue.py  market_name_queue.py  raw_items_queue.py
price_monitoring/repositories/: __init__.py  dmarket_repository.py
price_monitoring/services/: __init__.py  dmarket_service.py
price_monitoring/storage/: batch_processor.py  data_compression.py  data_format.py  data_pipeline.py  dmarket.py  integration.py  schema_validator.py  user_settings.py
price_monitoring/storage/proxy/: abstract_proxy_storage.py  redis_proxy_storage.py
price_monitoring/telegram/: dmarket_fee.py  models.py
price_monitoring/telegram/bot/: __init__.py  abstract_bot.py  abstract_command.py  abstract_settings.py  abstract_whitelist.py  aiogram_bot.py  bot.py  formatters.py  keyboards.py  menu.py  notification_formatter.py  router.py  states.py
price_monitoring/telegram/bot/commands/: offers.py  set_limit.py  set_min_price.py  settings.py
price_monitoring/telegram/bot/constants/: __init__.py  games.py  modes.py  settings.py  trading_modes.py
price_monitoring/telegram/fresh_filter/: __init__.py  abstract_filter.py  redis_filter.py
price_monitoring/telegram/offer_provider/: __init__.py  abstract_offer_provider.py  chain_provider.py  redis_provider.py  redis_sell_history_provider.py  settings_based_provider.py
price_monitoring/telegram/offers/: __init__.py  base_item_offer.py  dmarket_offer.py  dmarket_orders_offer.py
price_monitoring/telegram/runner/: abstract_runner.py  runner_impl.py
price_monitoring/tracing/: __init__.py  client_tracer.py  http_tracer.py
price_monitoring/worker/: market_name_extractor.py  worker.py
price_monitoring/worker/processing/: __init__.py  abstract_dmarket_item_processor.py  item_processor.py  market_name_extractor.py
proxy_http/: __init__.py  aiohttp_session_factory.py  async_proxies_concurrent_limiter.py  decorators.py  proxy.py  proxy_session_factory.py
proxy_http/aiohttp_addons/: aihttp_socks_connector.py
scalability/: __init__.py  distributed_parser.py  parser.py  proxy_manager.py  scalable_worker.py  scheduler.py  work_distributor.py  worker.py
scripts/: check_code_quality.py  check_services.py  fix_cyrillic.py  init_project.py  make_executable.py  update_dependencies.py
tests/: conftest.py  test_redis_connector.py
tests/parsers/dmarket/: test_dmarket_parser.py  test_parser.py
tests/queues/rabbitmq/: test_rabbitmq_connector.py
tests/storage/: test_dmarket.py
tests/telegram/bot/: test_aiogram_bot.py  test_formatters.py  test_keyboards.py  test_menu.py  test_notification_formatter.py  test_states.py
tests/telegram/offers/: test_dmarket_offer.py  test_dmarket_orders_offer.py
tests/worker/: test_worker.py
utils/: data_compression.py  rate_limiter.py  upload_proxies.py
(+28 files in other folders)
