[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "inconsistent-return-statements",
    "no-else-return",
    "broad-except",
    "logging-fstring-interpolation",
    # Добавлено для решения ложного срабатывания на os.getenv и os.path
    "no-member",
]

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 100

[tool.pylint.similarities]
# Maximum number of characters on a single line.
ignore-imports = "yes"

[tool.pylint.basic]
# Maximum number of characters on a single line.
good-names = [
    "f", "s", "d", "i", "j", "k", "setUp", "tearDown"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
allow_redefinition = true
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "common.*",
    "price_monitoring.async_runner",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" # Добавлено для устранения PytestDeprecationWarning

[tool.coverage.run]
omit = [
    "*tests*",
    "*/abstract_*.py",
    "*/__init__.py",
    "price_monitoring/async_runner.py",
    "price_monitoring/common.py",
    "price_monitoring/constants.py",
    "price_monitoring/tracer.py",
]

[tool.poetry]
name = "dmarket-price-monitoring"
version = "0.1.0"
description = "System for monitoring prices on DMarket"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false # Disable installing the project itself

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
aio-pika = "9.4.1"
dataclasses-json = "^0.5.7"
marshmallow-dataclass = "^8.5.8"
marshmallow = "^3.16.0"
marshmallow-enum = "^1.5.1"
aioredis = "==2.0.0"  # Закрепляем версию
aioredis-lock = "^0.1.0"
aiohttp = "^3.9.0"
aiohttp-socks = "^0.10.1"
PySocks = "^1.7.1"
random-user-agent = "^1.0.1"
json-logging = "^1.3.0"
PyYAML = "^6.0"
aiozipkin = "^1.1.1"
orjson = "^3.7.2"
Brotli = "^1.1.0"
uvloop = { version = "^0.16.0", optional = true }
asyncpg = "0.29.0"

[tool.poetry.extras]
linux = ["uvloop"]

[tool.poetry.group.dev.dependencies]
# Перенесённые зависимости из устаревшего раздела
aioresponses = "^0.7.3"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"
pylint = "^3.3.6"
fakeredis = "^1.8.1"
freezegun = "^1.2.1"
memory-profiler = "^0.60.0"
line-profiler = "^4.0"
line-profiler-pycharm = "^1.1.0"
mypy = "^1.15.0"
types-PyYAML = "^6.0.7"
python-dotenv = "^0.20.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
notebook = "^6.4.12"
black = "^25.1.0"
pre-commit = "^4.2.0"
sortedcontainers = "^2.4.0"
pytest-mock = "^3.12.0"
# Добавленные ранее типы
types-requests = "^2.32.0.20250328"
types-redis = "^4.6.0.20241004"
bandit = "^1.8.3"
vulture = "^2.14"
autoflake = "^2.3.1"
pycodestyle = "^2.13.0"
pydocstyle = "^6.3.0"
radon = "^6.0.1"
detect-secrets = "^1.5.0"
flake8 = "^7.2.0"
interrogate = "^1.7.0"
isort = "^6.0.1"
pytest-cov = "^6.1.1"
safety = "^3.3.1"
ruff = "^0.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
